# tree-sitter-teal

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  eslint.config.mjs  go.mod  grammar.js  index.js  package-lock.json  package.json  parsed.txt  pyproject.toml  setup.py  test.sh  tree-sitter.json
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
bindings/c/: tree-sitter-teal.pc.in
bindings/c/tree_sitter/: tree-sitter-teal.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_teal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTealTests/: TreeSitterTealTests.swift
bindings/zig/: root.zig
corpus/: casting.txt  comments.txt  do_blocks.txt  enum_block.txt  function_call.txt  function_declaration.txt  function_types.txt  generic_functions.txt  goto.txt  if_statements.txt  indexing.txt  numbers.txt  operators.txt  record_block.txt  return.txt  semi-colons.txt  simple_types.txt  strings.txt  table_constructor.txt  table_types.txt  variable_assignment.txt  variable_declaration.txt
examples/: tl-example.tl  tl-tutorial.tl
queries/: folds.scm  highlights.scm  locals.scm
src/: binding.cc  grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: break.txt  do_blocks.txt  function_declaration.txt  generic_functions.txt  if_statements.txt  indexing.txt  interface_block.txt  macroexp.txt  numbers.txt  operators.txt  parenthesized.txt  record_block.txt  return.txt  simple_types.txt  strings.txt  table_types.txt  variable_declaration.txt
