[package]
name = "tree-sitter-teal"
description = "teal grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "teal"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/euclidianAce/tree-sitter-teal"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
